qtwebengine/error
/var/uhubuild/work/compile/src/core/web_engine_context.cpp: In constructor ‘QtWebEngineCore::WebEngineContext::WebEngineContext()’:
/var/uhubuild/work/compile/src/core/web_engine_context.cpp:488:82: error: ‘platform’ was not declared in this scope
     if (!qEnvironmentVariableIsSet("QT_WEBENGINE_DISABLE_WAYLAND_WORKAROUND") && platform.startsWith("wayland", Qt::CaseInsensitive))
                                                                                  ^~~~~~~~
/var/uhubuild/work/compile/src/core/web_engine_context.cpp:488:82: note: suggested alternative: ‘alarm’
     if (!qEnvironmentVariableIsSet("QT_WEBENGINE_DISABLE_WAYLAND_WORKAROUND") && platform.startsWith("wayland", Qt::CaseInsensitive))
                                                                                  ^~~~~~~~
                                                                                  alarm

